--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ratan dada</h1>
+    <div><img src="" alt=""></div>
+    <div class=""><h1>ratan dada</h1></div>
+    
 </body>
 </html>
